# Privacy-GUI

./: .README.md.swp  .gitignore  README.md
GUI/: random.py  simple.py
GUI/scripts/: random.py
custom_nav/: package.xml
custom_nav/cmake/: turtlebot_navigationConfig.cmake
custom_nav/launch/: amcl_demo.launch  pr2_amcl.launch
custom_nav/maps/: betterMap.yaml  labtest.pgm  labtest.yaml
custom_nav/param/: base_local_planner_params.yaml
gui/: CMakeLists.txt  package.xml  package.xml~
gui/scripts/: simple.py
hat_detector/: detect_green_hat.cpp
magic_tabletop/: CMakeLists.txt  TO-DO  package.xml
magic_tabletop/launch/: magic_floor.launch  magic_mat.launch  numpy_converter.launch
magic_tabletop/scripts/: color_viewer.py  fill_holes.py  kinect_numpy_test.py  magic_floor.py  magic_mat.py  numpyer.py  publish_plane_tf.py  spare_code.py  transform_PointCloud2.py
magic_tabletop/src/: fill_in_plane.cpp  filter_cloud_by_axes.cpp  fit_plane.cpp  transform_PointCloud2.cpp  unpack_PointCloud2.cpp
magic_tabletop/srv/: FillInPlane.srv  FilterCloudByAxes.srv  FitPlane.srv  PublishPlaneTF.srv  TransformPointCloud2.srv
map_registration/: README.md  TODO  components.py  converted_pts.yaml  customview.py  demo.py  lab.pgm  lab_zones.yaml  mapTransform.py  map_registration.py
map_registration/maps/: betterMap.pgm  lab.pgm  lab_pretty.pgm  library.pgm  library.yaml
map_registration/register/: registration.yaml  semantic.1.ele  semantic.1.node  semantic.node  slam.1.ele  slam.1.node  slam.node
map_registration/triangle/: example.1.ele  example.1.node  example.node  example.yaml  lib.1.ele  lib.1.node  lib.node  showme  triangle  tricall
notes/: matt-log
physical_privacy/: .nfs0000000001a43b6900000113  CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
physical_privacy/launch/: map_registration.launch  priv_nav.launch
physical_privacy/scripts/: .nfs0000000001ba1c8500000439  draw_lines.py  restrict_zones.py  restrict_zones_client.py
physical_privacy/src/: zone_layer.cpp  zone_layer.h
physical_privacy/srv/: restrictZones.srv
physical_privacy/zones/: alex_test.yaml  demo.yaml  jasper_test.yaml  jasper_test_real_world.yaml  pts.yaml
plane_shaver/: CMakeLists.txt  README  package.xml
plane_shaver/launch/: redact_plane.launch  track_AR_tag.launch
plane_shaver/src/: redact_plane.cpp
privacy/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
privacy/launch/: .nfs0000000001d600460000001b  AKGstopper.launch~  FramePublisher.launch  amcl.launch~  bagreplay.launch  bagreplay.launch~  bagreplayForRviz.launch  bagreplayForRviz.launch~  demo.launch  imageFilter.launch  makeFrame.launch  makeFrame.launch~  privacy.launch  privacy.launch~  privacyTfSync.launch  privacyTfSync.launch~  turtlebotTest.launch  turtlebotTest.launch~
privacy/maps/: map1.pgm  map2.yaml
privacy/msg/: PoseMarkers.msg  markers.msg~
privacy/scripts/: boundingBox.py  boundingBox2.py  defaults.py~  frameControl.py  frameControl.py~  framePublisher.py  framePublisher.py~  im.py  im.py~  imageFilter.py  makeFrame.py  makeFrame.py~  makeMarker.py~  privacy.py  privacy.py~  privacyBagCheat.py  privacyBagCheat.py~  privacyBagCheatv2.py  privacyTfSync.py  privacyTfSync.py~  restamper.py  restamper.py~  rosCV.py  settings.py~  turtleVision.py
privacy_zones/: CMakeLists.txt  components.py  jolley4.pgm  jolley4.world  jolley4_zone_controls.yaml  jolley4_zones.yaml  package.xml  pointSelect.py  privacyZones.py  setup.py  ssalsr_zone_controls.py  test.yaml
privacy_zones/launch/: light_follower_demo.launch  light_follower_demo_local_sim.launch  local_sim_demo.launch  web_interface_demo.launch  web_interface_demo_local_sim.launch  zone_server.launch  zone_sim.launch  zone_viz.launch
privacy_zones/maps/: floorplan.xcf
privacy_zones/msg/: Transition.msg  Zone.msg  ZoneControl.msg
privacy_zones/scripts/: lightFollower.py  make_zone_peac_refs.py  privacyZones.py  zoneServer.py  zoneViz.py
privacy_zones/src/privacy_zones/: components.py  map_geometry.py  pointSelect.py
privacy_zones/srv/: DevicesInZone.srv  GetZoneLocations.srv  LocalizeInZone.srv
remote_nav/: .nfs0000000001d20a6500000013  CMakeLists.txt  map_and_img.rviz  package.xml
remote_nav/config/: imageOnly.rviz  map_and_img.rviz
remote_nav/interfaces/: customview.py  mapTransform-old.py  mapTransform.py  mapTransform.ui  mapZone.ui  pointSelect.py  pointSelect.ui
remote_nav/launch/: pr2UI.launch  rvizRun.launch  turtleUI.launch
remote_nav/maps/: betterPrettyMap.pgm  betterPrettyMap.yaml  lab.pgm  lab.yaml  labtest.yaml  pretty_map_zoomed.pgm  pretty_map_zoomed.yaml  zone.pgm
remote_nav/rviz/: pr2_map_img.rviz  turtle_map_img.rviz
remote_nav/scripts/: MapMetaData.py  headTracker.py  imageOnly.rviz  mapNav.py  map_and_img.rviz  myviz.py  myvizOld.py  rangePub.py  startFrame.py  timeTester.py
rvizRun/: CMakeLists.txt
rvizRun/launch/: rvizRun.launch
rvizRun/scripts/: goal.py  map_and_img.rviz  myviz.py  (+1 more)
tunnel_vision/: CMakeLists.txt  package.xml
turtlebot_patrol/: CMakeLists.txt  package.xml
(+32 files in other folders)
